--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body{
     height: 2.98rem;
     margin: 10px 14px;
     font-size: 30px;
-    background-color: white;
+    background-color: rgb(224, 216, 231);
     border-radius: .21rem;
     padding-right: .5rem;
 }
