--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 *{
+    font-family: 'Sarpanch', sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -53,8 +54,8 @@ body{
     height: 50px;
     margin:.6rem .2rem;
     float: left;
+    font-weight: 100;
     border-width: 0;
-    font-weight: bold;
     font-size: 1.5rem;
 }
 .number{
